force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Application_End__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Application_End__c</fullName>
    <description>Shift-level override of when the volunteer application closes. Blank inherits the Job's Application End, then falls back to the Shift's start time, via the Application End (Effective) formula.</description>
    <inlineHelpText>Optional: when applications close for this Shift only. Leave blank to inherit from the Job (or close when the Shift starts).</inlineHelpText>
    <label>Application End</label>
    <type>DateTime</type>
</CustomField>