force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Application_End_Effective__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Application_End_Effective__c</fullName>
    <description>System field mapped post-install to the Form Template Source End Date override for Shifts. Resolves the Shift's Application End override, then the Job's, then the Shift's own start time so applications close when the shift begins (matches the legacy Status behavior).</description>
    <formula>IF(NOT(ISBLANK(cUnite_Application_End__c)), cUnite_Application_End__c,
IF(NOT(ISBLANK(GW_Volunteers__Volunteer_Job__r.cUnite_Application_End__c)), GW_Volunteers__Volunteer_Job__r.cUnite_Application_End__c,
GW_Volunteers__Start_Date_Time__c))</formula>
    <label>Application End (Effective)</label>
    <type>DateTime</type>
</CustomField>