force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Application_Start__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Application_Start__c</fullName>
    <description>Shift-level override of when the volunteer application opens. Blank inherits the Job's Application Start via the Application Start (Effective) formula.</description>
    <inlineHelpText>Optional: when applications open for this Shift only. Leave blank to inherit from the Job.</inlineHelpText>
    <label>Application Start</label>
    <type>DateTime</type>
</CustomField>