force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Application_Start_Effective__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Application_Start_Effective__c</fullName>
    <description>System field mapped post-install to the Form Template Source Start Date override for Shifts. Resolves the Shift's Application Start override first, then falls back to the Job's.</description>
    <formula>IF(ISBLANK(cUnite_Application_Start__c), GW_Volunteers__Volunteer_Job__r.cUnite_Application_Start__c, cUnite_Application_Start__c)</formula>
    <label>Application Start (Effective)</label>
    <type>DateTime</type>
</CustomField>