force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Featured__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>