force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Hold__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold</label>
    <type>Checkbox</type>
</CustomField>