force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Portal_Shift_Selector_Class__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Portal_Shift_Selector_Class__c</fullName>
    <formula>IF(cUnite_Status__c == &apos;Full/Waitlisting&apos;,&apos;slds-theme_warning slds-theme_alert-texture&apos;,
IF(cUnite_Status__c == &apos;Full&apos;, &apos;slds-theme_error&apos;,
IF(cUnite_Featured__c,&apos;slds-theme_inverse&apos;,&apos;&apos;)))</formula>
    <label>Portal Shift Selector Class</label>
    <type>Text</type>
</CustomField>