force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Portal_Shift_Selector_Disabled__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Portal_Shift_Selector_Disabled__c</fullName>
    <formula>OR(
        cUnite_Status__c == &apos;Full&apos;,
        cUnite_Status__c == &apos;Closed&apos;,
        cUnite_Hold__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Shift Selector Disabled</label>
    <type>Checkbox</type>
</CustomField>