force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Signup_Link__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Signup_Link__c</fullName>
    <description>Use this in email templates to share custom signup links.</description>
    <formula>LEFT($Api.Enterprise_Server_URL_100,FIND(&apos;.salesforce.com/&apos;, $Api.Enterprise_Server_URL_100)) +&apos;site.com/volunteer/&apos;+CASESAFEID(Id)</formula>
    <label>Signup Link</label>
    <type>Text</type>
</CustomField>