force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Status__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Status__c</fullName>
    <formula>If(GW_Volunteers__Start_Date_Time__c &lt;=  NOW(),&apos;Closed&apos;,
If(GW_Volunteers__Number_of_Volunteers_Still_Needed__c &lt;= 0,
If(
AND(
GW_Volunteers__Volunteer_Job__r.cUnite_Allow_Waitlisting__c,
GW_Volunteers__Total_Volunteers__c &lt; (GW_Volunteers__Desired_Number_of_Volunteers__c + 
BlankValue(GW_Volunteers__Volunteer_Job__r.cUnite_Waitlist_Limit__c,9999))
) 
,&apos;Full/Waitlisting&apos;,&apos;Full&apos;),&apos;Open&apos;))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>