force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/cUnite_Volunteer_Website_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Volunteer_Website_Time_Zone__c</fullName>
    <formula>BlankValue(Text(GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Volunteer_Website_Time_Zone__c),
BlankValue( Text(GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Campaign__r.GW_Volunteers__Volunteer_Website_Time_Zone__c),
Text($User.TimeZoneSidKey)
))</formula>
    <label>Volunteer Website Time Zone</label>
    <type>Text</type>
</CustomField>